...
    final fcm = Provider.of<FCMService>(context, listen: false);

    if (_controllerEmail.text.isEmpty ||
        _controllerPassword.text.isEmpty ||
        _controllerConfirmPassword.text.isEmpty) {
      setState(() {
        errorMessage = 'Please fill in all fields.';
      });
      logger.w("Empty fields detected");
      return;
    }

    logger.d("Starting user registration process");
...
      logger.w("Passwords do not match");
      return;
    }

    if (!isEmailValid(_controllerEmail.text.trim())) {
      setState(() {
        errorMessage = 'Please enter a valid email address.';
      });
      logger.w("Invalid email address");
      return;
    }

    if (!isPasswordValid(_controllerPassword.text)) {
...

  Widget _buildRegisterContent(ColorScheme colorScheme) {
    return Column(
      mainAxisAlignment: MainAxisAlignment.center,
      children: [
        MyTextField(
            controller: _controllerEmail, title: 'Email', obscureText: false),
        const SizedBox(height: 25),
        MyTextField(
            controller: _controllerPassword,
            title: 'Password',
            obscureText: !isPasswordVisible,
            fieldKey: const Key('password_field'),
            showVisibilityToggle: true,
            onVisibilityToggle: () {
              setState(() {
                isPasswordVisible = !isPasswordVisible;
              });
            }),
        const SizedBox(height: 25),
        MyTextField(
            controller: _controllerConfirmPassword,
            title: 'Confirm password',
            obscureText: !isConfirmPasswordVisible,
            fieldKey: const Key('confirm_password_field'),
            showVisibilityToggle: true,
            onVisibilityToggle: () {
              setState(() {
                isConfirmPasswordVisible = !isConfirmPasswordVisible;
              });
            }),
        const SizedBox(height: 25),
        _errorMessage(),
        const SizedBox(height: 20),
        CustomSubmitButton(
          key: const Key('register_button'),
          backgroundColor: colorScheme.primary,
          foregroundColor: colorScheme.onPrimary,
          text: 'Register',
          onPressed: createUserWithEmailAndPassword,
        ),
        const SizedBox(height: 35),
        TextButton(
            onPressed: widget.showLoginPage,
            child: const Text('Already have an account? Login now',
                style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold))),
        const SizedBox(height: 50),
        const Text('By registering, you agree to our:'),
        Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            TextButton(
                onPressed: () => showTos(),
                child: const Text('Terms of Service')),
            TextButton(
                onPressed: () => showPrivacyPolicy(),
                child: const Text('Privacy Policy')),
          ],
        ),
      ],
    );
  }

...
