...
                    ],
                  ),
                ),
                const SizedBox(height: 40),
                MyTextField(
                  controller: _controllerName,
                  title: 'Name *',
                  obscureText: false,
                ),
                const SizedBox(height: 20),
                MyTextField(
                  controller: _controllerUsername,
                  title: 'Username *',
                  obscureText: false,
                  suffixIcon: _isUsernameAvailable
                      ? const Icon(Icons.check, color: Colors.green)
                      : const Icon(Icons.close, color: Colors.red),
                ),
                const SizedBox(height: 10),
...
                  style: TextStyle(
                    color: _isUsernameAvailable ? Colors.green : Colors.red,
                  ),
                ),
                const SizedBox(height: 35),
                CustomSubmitButton(
                  key: const Key('next_button'),
                  backgroundColor: colorScheme.primary,
                  foregroundColor: colorScheme.onPrimary,
                  text: 'Next',
                  onPressed: _submitForm,
                ),
              ],
...
