...
                  const SizedBox(height: 25),

                  _errorMessage(),
                  const SizedBox(height: 20),

                  CustomSubmitButton(
                      text: 'Sign In', onPressed: signInWithEmailAndPassword),

                  const SizedBox(height: 35),

                  // or continue with
                  Padding(
                    padding: const EdgeInsets.symmetric(horizontal: 25.0),
...
                  Row(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      TextButton(
                          onPressed: navigateToRegisterPage,
                          child: const Text(
                            'Not a member? Register now',
                            style: TextStyle(
                              color: Colors.deepPurple,
                              fontWeight: FontWeight.bold,
                              fontSize: 18,
                            ),
                          ))
...
